Lab 3 pierwsza wersja

--- a/02_funkcje_instr.ipynb
+++ b/02_funkcje_instr.ipynb
@@ -189,26 +189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function objetosc = objetosc_stozka(r, h)\n",
+    "function objentosc = objetosc_stozka(r, h)\n",
     "% Skrypt wyznacza objętość ztozka.\n",
-    "% ArgumentyL\n",
+    "% Argumenty\n",
     "%   r  - promień podstawy\n",
     "%   h  - wysokość stożka \n",
     "\n",
-    "objetosc = pole_kola2(r) * h / 3;\n",
+    "objentosc = pole_kola2(r) * h / 3;\n",
     "\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans =  3.1416\r\n"
+     ]
+    }
+   ],
    "source": [
     "objetosc_stozka(1, 3)"
    ]
@@ -221,7 +229,7 @@
     }
    },
    "source": [
-    "**Zadanie 2**\n",
+    "## Zadanie 2\n",
     "\n",
     "Napisz funkcję o nazwie `rzut_poziomy.m`, która wyznacza zasięg rzutu poziomego zgodnie ze wzorem \n",
     "$$ Z = v_0 \\sqrt{\\frac{2h}{g}}$$\n",
@@ -251,11 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = -1\n",
+    "x = -1;\n",
     "\n",
     "if x < 0\n",
     "    printf('Wartość %f jest mniejsza od zera\\n', x);\n",
@@ -293,9 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans = 0\n",
+      "ans = 1\n",
+      "ans = 0\n",
+      "ans = 1\n",
+      "x = 0\n"
+     ]
+    }
+   ],
    "source": [
     "5 < 3       % porównywanie liczb\n",
     "4 == 3 + 1\n",
@@ -324,11 +344,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans = 0\n",
+      "ans = 1\n",
+      "ans = 1\n",
+      "ans = 0\n",
+      "ans = 0\n"
+     ]
+    }
+   ],
    "source": [
     "x = 42; y = 3;\n",
+    "\n",
     "x < y && y > 5\n",
     "x > y || y - 1 == x \n",
     "xor(x > y, 'b' < 'a')\n",
@@ -355,9 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  41\n",
+      "Liczba 41 jest nieparzysta"
+     ]
+    }
+   ],
    "source": [
     "x = 42\n",
     "\n",
@@ -402,11 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = -5\n",
+      "Liczba  jest mniejsza od zera"
+     ]
+    }
+   ],
    "source": [
-    "x = 42\n",
+    "x = -5\n",
     "\n",
     "if x < 0\n",
     "    printf('Liczba  jest mniejsza od zera', x);\n",
@@ -435,11 +488,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
    "source": [
-    "x = 1\n",
+    "x = 1;\n",
+    "\n",
     "while x < 10\n",
     "    printf('%d ', x);\n",
     "    x = x + 1;\n",
@@ -485,11 +547,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pole koła o promieniu 0.141579 wynosi 0.062972\r\n",
+      "Pole koła o promieniu 0.972987 wynosi 2.974157\r\n",
+      "Pole koła o promieniu 0.198791 wynosi 0.124149\r\n",
+      "Pole koła o promieniu 0.395131 wynosi 0.490492\r\n",
+      "Pole koła o promieniu 0.195906 wynosi 0.120572\r\n",
+      "Pole koła o promieniu 0.661994 wynosi 1.376757\r\n",
+      "Pole koła o promieniu 0.492974 wynosi 0.763479\r\n",
+      "Pole koła o promieniu 0.200430 wynosi 0.126204\r\n",
+      "Pole koła o promieniu 0.637720 wynosi 1.277643\r\n",
+      "Pole koła o promieniu 0.551701 wynosi 0.956218\r\n"
+     ]
+    }
+   ],
    "source": [
-    "for i=[3 5 7]\n",
+    "for i=[3 5 7 10 40 5]\n",
     "    printf('Pole koła o promieniu %f wynosi %f\\n', i, pole_kola2(i));\n",
     "end"
    ]
@@ -509,13 +588,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n =  10\n",
+      "  1   2   3   4   5   6   7   8   9  10 \n",
+      "  2   4   6   8  10  12  14  16  18  20 \n",
+      "  3   6   9  12  15  18  21  24  27  30 \n",
+      "  4   8  12  16  20  24  28  32  36  40 \n",
+      "  5  10  15  20  25  30  35  40  45  50 \n",
+      "  6  12  18  24  30  36  42  48  54  60 \n",
+      "  7  14  21  28  35  42  49  56  63  70 \n",
+      "  8  16  24  32  40  48  56  64  72  80 \n",
+      "  9  18  27  36  45  54  63  72  81  90 \n",
+      " 10  20  30  40  50  60  70  80  90 100 \n"
+     ]
+    }
+   ],
    "source": [
     "% tabliczka mnożenia\n",
     "n = 10\n",
@@ -546,15 +643,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liczba 16 nie jest liczbą pierwszą\r\n",
+      "Znalazłem dzielnik 2\r\n"
+     ]
+    }
+   ],
    "source": [
-    "n = 11;\n",
+    "n = 16;\n",
     "czy_pierwsza = true;\n",
     "\n",
     "for i = 2:n-1\n",
@@ -574,18 +680,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 11 12 14 15 16 17 18 19 20 "
+     ]
+    }
+   ],
    "source": [
     "for n=1:20\n",
     "    if n == 13\n",
     "        continue\n",
     "    end\n",
+    "\n",
     "    printf('%d ', n)\n",
     "end"
    ]
