--- a/03_macierze.ipynb
+++ b/03_macierze.ipynb
@@ -25,33 +25,52 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variables in the current scope:\r\n",
-      "\r\n",
-      "   Attr Name        Size                     Bytes  Class\r\n",
-      "   ==== ====        ====                     =====  ===== \r\n",
-      "        ans         1x5                          5  char\r\n",
-      "        m           2x3                         48  double\r\n",
-      "        s           1x1                          8  double\r\n",
-      "        v1          1x4                         32  double\r\n",
-      "        v2          3x1                         24  double\r\n",
-      "\r\n",
-      "Total is 19 elements using 117 bytes\r\n",
-      "\r\n"
+      "s =  5\n",
+      "v1 =\n",
+      "\n",
+      "    5   88    3   11\n",
+      "\n",
+      "v2 =\n",
+      "\n",
+      "   3\n",
+      "   7\n",
+      "   4\n",
+      "\n",
+      "m =\n",
+      "\n",
+      "   9   6   3\n",
+      "   5   7   2\n",
+      "\n",
+      "Variables in the current scope:\n",
+      "\n",
+      "   Attr Name        Size                     Bytes  Class\n",
+      "   ==== ====        ====                     =====  ===== \n",
+      "        ans         1x5                          5  char\n",
+      "        m           2x3                         48  double\n",
+      "        s           1x1                          8  double\n",
+      "        v1          1x4                         32  double\n",
+      "        v2          3x1                         24  double\n",
+      "\n",
+      "Total is 19 elements using 117 bytes\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "s = 5;                 % skalar\n",
-    "v1 = [5, 88, 3, 11];   % wektor \"weirszowy\"\n",
-    "v2 = [3; 7; 4];        % wektor \"kolumnowy\"\n",
-    "m = [9 6 3; 5 7 2];    % macierz\n",
+    "s = 5                 % skalar\n",
+    "v1 = [5, 88, 3, 11]   % wektor \"wierszowy\"\n",
+    "v2 = [3; 7; 4]        % wektor \"kolumnowy\"\n",
+    "m = [9 6 3; 5 7 2]    % macierz\n",
     "whos"
    ]
   },
@@ -64,13 +83,15 @@
    },
    "source": [
     "## Tworzenie wektorów\n",
-    "* operator `:`\n",
-    "* funkcja `linspace(poczatek, koniec, ile przedziałow)`"
+    "* operator `:` \n",
+    " * `N:M`wartości całkowite od `N` do `M`\n",
+    " * `N:K:M` wartości załkowite od `N` do `M` z krokiem `K`\n",
+    "* funkcja `linspace(N, M, K)` - wektor zawierający `K` rónoodległych punktów na odcinnku od `N` do `M`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +100,11 @@
      "text": [
       "v1 =\n",
       "\n",
-      "   1   2   3   4   5\n",
+      "   1   2   3   4\n",
       "\n",
       "v2 =\n",
       "\n",
-      " Columns 1 through 8:\n",
-      "\n",
-      "    1.0000    1.5000    2.0000    2.5000    3.0000    3.5000    4.0000    4.5000\n",
-      "\n",
-      " Columns 9 through 11:\n",
-      "\n",
-      "    5.0000    5.5000    6.0000\n",
+      "    1.0000    1.5000    2.0000    2.5000    3.0000    3.5000    4.0000\n",
       "\n",
       "v3 =\n",
       "\n",
@@ -99,9 +114,9 @@
     }
    ],
    "source": [
-    "v1 = 1:5\n",
-    "v2 = 1:0.5:6\n",
-    "v3 = linspace(1, 2, 5 )"
+    "v1 = 1:4\n",
+    "v2 = 1:0.5:4\n",
+    "v3 = linspace(1, 2, 5)"
    ]
   },
   {
@@ -119,51 +134,69 @@
     }
    },
    "source": [
-    "## Indeksowanie elementów\n",
+    "## Dostęp do elementów wektora\n",
     "\n",
-    "* elementy indeksowane od `1` do `end` za pomocą operatora `()`"
+    "* elementy indeksowane od `1` za pomocą operatora `()`\n",
+    "* indeksowanie liniowe `v(i)` lub macierzowe `v(i,j)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-5\n",
-      "-4\n",
-      "  -5  -4  -3\n",
-      "ans =\n",
-      "\n",
-      "  -5  -3  -1   1   3\n",
-      "\n",
       "v =\n",
       "\n",
-      "   42   -4   -3   -2   -1    0    1    2    3    4    5\n",
+      "  -5  -4  -3  -2  -1   0   1   2   3   4   5\n",
+      "\n",
+      "a = -5\n",
+      "ans = -5\n",
+      "b = -4\n",
+      "c =\n",
+      "\n",
+      "  -5  -4  -3\n",
+      "\n",
+      "d =\n",
+      "\n",
+      "  -5  -3  -1   1   3\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "v = -5:5;\n",
-    "disp(v(1))\n",
-    "disp(v(2))\n",
-    "disp(v(1:3))\n",
+    "v = -5:5\n",
+    "a = v(1)\n",
+    "b = v(2)\n",
+    "c = v(1:3)       % indeksowanie zakresem \n",
     "ind = 1:2:10;\n",
-    "v(ind)       % indeksowanie innym wektorem\n",
-    "\n",
-    "% modyfikownie elementów \n",
-    "v(1) = 42;\n",
-    "v"
+    "d = v(ind)       % indeksowanie innym wektorem zawierającym indeksy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* `end` oznacza indekst ostatniego elementu\n",
+    "* `1:end` indeksy wsztskich elementów\n",
+    "* `(:)` wszystkie elementy (wektor wierszowy bedzie wypisany jako kolumnowy)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -172,29 +205,61 @@
       "ans =  5\n",
       "ans =\n",
       "\n",
-      "   42\n",
-      "   -4\n",
-      "   -3\n",
-      "   -2\n",
-      "   -1\n",
-      "    0\n",
-      "    1\n",
-      "    2\n",
-      "    3\n",
-      "    4\n",
-      "    5\n",
+      "  -5  -4  -3  -2  -1   0   1   2   3   4   5\n",
+      "\n",
+      "ans =\n",
+      "\n",
+      "  -5\n",
+      "  -4\n",
+      "  -3\n",
+      "  -2\n",
+      "  -1\n",
+      "   0\n",
+      "   1\n",
+      "   2\n",
+      "   3\n",
+      "   4\n",
+      "   5\n",
       "\n"
      ]
     }
    ],
    "source": [
     "v(end)   % ostatni element\n",
-    "v(:)    % wszystkie elementy"
+    "v(1:end)\n",
+    "v(:)    % wszystkie elementy\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\r\n",
+      "\r\n",
+      "    42  -200  -300   333   333   333   333     2     3     4   222\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "% modyfikownie elementów \n",
+    "v(1) = 42;\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -203,26 +268,45 @@
      "text": [
       "v =\n",
       "\n",
-      "   13   -2   13   -1   -1   -1   -1    2    3    4    5\n",
+      "   222  -200   222   333   333   333   333     2     3     4   222\n",
       "\n",
       "v =\n",
       "\n",
-      "   13   -2   13   -1   -1   -1   -1    2    3    4    5\n",
+      "   222  -200   222   333   333   333   333     2     3     4   222\n",
       "\n",
       "v =\n",
       "\n",
-      "  -100  -200  -300    -1    -1    -1    -1     2     3     4     5\n",
+      "  -100  -200  -300   333   333   333   333     2     3     4   222\n",
+      "\n",
+      "v =\n",
+      "\n",
+      "   222     4     3     2   333   333   333   333  -300  -200  -100\n",
       "\n"
      ]
     }
    ],
    "source": [
     "% modyfikowanie zakresu wartości\n",
-    "v([1 3]) = 13;\n",
-    "v\n",
-    "v(4:7) = -1;\n",
-    "v\n",
-    "v(1:3) = [ -100 -200 -300]"
+    "v([1 3 end]) = 222\n",
+    "\n",
+    "v(4:7) = 333\n",
+    "    \n",
+    "v(1:3) = [ -100 -200 -300]\n",
+    "\n",
+    "v(:) = v(end:-1:1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* wstawienie elementu poza zakresem spowoduje rozszeszenie wektora\n",
+    "* brakujące elementy wypełnione zerami\n",
+    "* rozszerzenie nieefektywne - zalecane jest wstępne alokowanie wektora/macierzy o docelowym rozmiarze"
    ]
   },
   {
@@ -230,7 +314,7 @@
    "execution_count": 26,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -261,7 +345,9 @@
     }
    },
    "source": [
-    "## Transpozycja"
+    "## Transpozycja\n",
+    "\n",
+    "* operator `'` realizuje transpozycję wektora (macierzy)"
    ]
   },
   {
@@ -308,13 +394,17 @@
     }
    },
    "source": [
-    "## Łączenie wektorów"
+    "## Łączenie wektorów\n",
+    "* `[A B]` łączenie poziome (rozszerzanie wiersza)\n",
+    "* `[A; B]` łaczenie pionowe (rozszerenie kolumny)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,7 +419,27 @@
       "     1   101\n",
       "     2   102\n",
       "     3   103\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = 1:3;\n",
+    "v2 = 101:103;\n",
+    "\n",
+    "a = [v1   v2 ] % sklejanie wierszy\n",
+    "b = [v1'  v2'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "c =\n",
       "\n",
       "     1     2     3\n",
@@ -348,12 +458,6 @@
     }
    ],
    "source": [
-    "v1 = 1:3;\n",
-    "v2 = 101:103;\n",
-    "\n",
-    "a = [v1   v2 ]    % rozszerzenie wiersza\n",
-    "b = [v1'  v2'] \n",
-    "\n",
     "c = [v1 ; v2 ]    % rozszerzenie kolumn\n",
     "d = [v1'; v2']"
    ]
@@ -411,58 +515,75 @@
    "source": [
     "## Funkcje tworzące macierze\n",
     "* `rand(n,m)` losowe wartośc z przediału $[0, 1]$\n",
-    "* `zeros(n, m)` macierz zerowa\n",
-    "* `ones(n, m)`  macierz zawierająca jedynki\n",
-    "* `eye(n)`     macierz jednostkowa"
+    "* `zeros(n,m)` macierz zerowa\n",
+    "* `ones(n,m)`  macierz zawierająca jedynki\n",
+    "* `eye(n,m)`     macierz jednostkowa (jedynki na diagonali)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =\n",
+      "\n",
+      "   0.857732   0.762687   0.182540\n",
+      "   0.924703   0.434912   0.860971\n",
+      "   0.091105   0.663658   0.324743\n",
+      "\n",
+      "b =\n",
+      "\n",
+      "   0.17477   0.83209\n",
+      "   0.69167   0.47131\n",
+      "   0.86891   0.97530\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = rand(3)\n",
+    "b = rand(3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = zeros(5)\n",
+    "d = ones(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ans =\n",
-      "\n",
-      "   0.39837   0.59744\n",
-      "   0.46126   0.33638\n",
-      "   0.24633   0.44302\n",
-      "\n",
-      "ans =\n",
-      "\n",
-      "   0   0   0   0   0\n",
-      "   0   0   0   0   0\n",
-      "   0   0   0   0   0\n",
-      "   0   0   0   0   0\n",
-      "   0   0   0   0   0\n",
-      "\n",
-      "ans =\n",
-      "\n",
-      "   1   1   1   1   1\n",
-      "   1   1   1   1   1\n",
-      "\n",
-      "ans =\n",
-      "\n",
-      "Diagonal Matrix\n",
-      "\n",
-      "   1   0   0   0   0\n",
-      "   0   1   0   0   0\n",
-      "   0   0   1   0   0\n",
-      "   0   0   0   1   0\n",
-      "   0   0   0   0   1\n",
-      "\n"
+      "e =\r\n",
+      "\r\n",
+      "Diagonal Matrix\r\n",
+      "\r\n",
+      "   1   0   0   0\r\n",
+      "   0   1   0   0\r\n",
+      "   0   0   1   0\r\n",
+      "   0   0   0   1\r\n",
+      "\r\n"
      ]
     }
    ],
    "source": [
-    "rand(5);\n",
-    "rand(3, 2)\n",
-    "zeros(5)\n",
-    "ones(2,5)\n",
-    "eye(5)"
+    "e = eye(4)"
    ]
   },
   {
@@ -473,13 +594,17 @@
     }
    },
    "source": [
-    "## Indeksowanie macierzy"
+    "## Indeksowanie macierzy\n",
+    "* indeksowanie 2 wymiarów macierzy `(N,M)` od `1` do `end` \n",
+    "* indeksowanie liniowe `(N)` od `1` do `end` po elementach kolejnych kolumn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -491,24 +616,19 @@
       "   4   5   6\n",
       "\n",
       "a =  2\n",
-      "m =\n",
+      "b =\n",
       "\n",
-      "    1   42    3\n",
-      "    4    5    6\n",
+      "   1   2\n",
+      "   4   5\n",
       "\n",
-      "ans =\n",
-      "\n",
-      "    1   42\n",
-      "    4    5\n",
-      "\n",
-      "ans =\n",
+      "c =\n",
       "\n",
       "   1\n",
       "   4\n",
       "\n",
-      "ans =\n",
+      "d =\n",
       "\n",
-      "    1   42    3\n",
+      "   1   2   3\n",
       "\n"
      ]
     }
@@ -516,10 +636,34 @@
    "source": [
     "m = [1, 2, 3; 4, 5, 6]\n",
     "a = m(1,2)\n",
-    "m(1, 2) = 42\n",
-    "m(1:2, 1:2)\n",
-    "m(:, 1)        % cała kolumna\n",
-    "m(1, :)        % cały wiersz"
+    "b = m(1:2, 1:2)\n",
+    "c = m(:, 1)        % cała kolumna\n",
+    "d = m(1, :)        % cały wiersz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  1\n",
+      "b =  6\n",
+      "c =\n",
+      "\n",
+      "   1   4   2   5   3   6\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "% indeksowanie liniowe\n",
+    "a = m(1)\n",
+    "b = m(end)\n",
+    "c = m(1:end)"
    ]
   },
   {
@@ -539,52 +683,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ans =  100\n",
-      "ans =\n",
+      "a =  100\n",
+      "b =\n",
       "\n",
       "     1   100\n",
       "\n",
-      "ans =  100\n"
+      "c =  100\n"
      ]
     }
    ],
    "source": [
     "w = 1:100;\n",
-    "length(w)\n",
-    "size(w)\n",
-    "numel(w)"
+    "a = length(w)\n",
+    "b = size(w)\n",
+    "c = numel(w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ans =  100\n",
-      "ans =\n",
+      "a =  100\n",
+      "b =\n",
       "\n",
       "    13   100\n",
       "\n",
-      "ans =  1300\n"
+      "c =  1300\n"
      ]
     }
    ],
    "source": [
     "m = rand(13, 100);\n",
-    "length(m)\n",
-    "size(m)\n",
-    "numel(m)"
+    "a = length(m)\n",
+    "b = size(m)\n",
+    "c = numel(m)"
    ]
   },
   {
@@ -601,14 +747,16 @@
    "source": [
     "## Zmiana rozmiaru macierzy\n",
     "\n",
-    "* `reshape(macierz, n, m)`\n",
+    "* `reshape(A, M, N)` lub `reshape(A, [M N])` zmienia kształt macierzy na `MxN` (elementy ukladane kolumnami)\n",
     "* `fliplr(m)` , `flipup(m)`, `rot90()`  odbicie lewo-prawo, góra-dół i obrót 90 stopni"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -620,6 +768,30 @@
       "    2    5    8   11\n",
       "    3    6    9   12\n",
       "\n",
+      "a1 =\n",
+      "\n",
+      "    1    3    5    7    9   11\n",
+      "    2    4    6    8   10   12\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 1:12; \n",
+    "\n",
+    "a = reshape(w, 3, 4)\n",
+    "a1 = reshape(a, [2 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "b =\n",
       "\n",
       "   10    7    4    1\n",
@@ -643,12 +815,9 @@
     }
    ],
    "source": [
-    "w = 1:12; \n",
-    "\n",
-    "a = reshape(w, 3, 4)\n",
-    "b = fliplr(x)\n",
-    "c = flipud(x)\n",
-    "d = rot90(x)"
+    "b = fliplr(a)\n",
+    "c = flipud(a)\n",
+    "d = rot90(a)"
    ]
   },
   {
@@ -747,7 +916,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
