--- a/03_macierze.ipynb
+++ b/03_macierze.ipynb
@@ -26,7 +26,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -135,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie**  stwórz wektor `x` zawierający 100 kolejnych wartości z przedziału od $-\\pi$ do $\\pi$ a następnie wypisz jego elementy w losowej kolejności. Do przetasowania kolejności elementów wykorzystaj funkcję `randperm`. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -203,6 +210,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = zeros([1, 10]);\n",
+    "v1(1:3) = 1:3;\n",
+    "v1(10) = 5"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -210,7 +228,7 @@
     }
    },
    "source": [
-    "## Usuwanie elementów"
+    "## Usuwanie elementów wektora"
    ]
   },
   {
@@ -224,26 +242,6 @@
     "w(1) = []      % usuwanie wybranego elementu\n",
     "w([3 6]) = []  % usuwanie zakresu elementów\n",
     "w(6:end) = []\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Zadanie 4\n",
-    "\n",
-    "Zaimplementuj funkcję o nazwie `sito`, która korzystając z algorytmu [sita Eratostenesa](https://pl.wikipedia.org/wiki/Sito_Eratostenesa) utworzy wektor zawierający serię liczb pierwszych od 2 do `N`, gdzie wartość `N` jest jedynym argumentem funkcji. W przypadku braku podania argumentu domyślnie będzie użyta wartość `N=100`. \n",
-    "\n",
-    "1. Utwórz ciąg liczb od 2 do $n$\n",
-    "2. Dla kolejnych $i$ od 2 do $\\sqrt{n}$ wykreśl z ciągu liczb wszystkie wielokrotności $i$, czyli $i, 2i, 3i, \\ldots$\n",
-    "3. Zwróć liczby, które nie zostały wykreślone\n",
-    "\n",
-    "Wynik funkcji `sito` powinien być identyczny do wyniku funkcji Matlaba `primes`\n",
-    "\n"
    ]
   },
   {
@@ -301,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = [v1 ; v2 ]    % rozszerzenie kolumn\n",
@@ -314,7 +310,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ćwiczenie**: utwórz wektor zawierający elementy utworzone wg. schematu `[1 2 3 ... 99 100 100 99 ... 3 2 1]`"
+    "**Ćwiczenie**: utwórz wektor zawierający elementy ułożone wg. schematu  \n",
+    "`[1 2 3 ... 99 100 100 99 ... 3 2 1]`"
    ]
   },
   {
@@ -330,7 +327,9 @@
    },
    "source": [
     "## Macierze\n",
-    "\n"
+    "\n",
+    "* macierze również mozna tworzyć za pomoca operatora `:`\n",
+    "* ilość elementów w wierszach musi być jednakowa\n"
    ]
   },
   {
@@ -389,6 +388,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie** utwórz macierz o wymiarach 100x100, która posiada wartości 1 w pierwszej i czwartej ćwiartce oraz wartości 0 w pozostałych miejscach, zgodnie z poniższym przykładem macierzy 4x4   \n",
+    "`\n",
+    "1 1 0 0\n",
+    "1 1 0 0\n",
+    "0 0 1 1\n",
+    "0 0 1 1 \n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -407,10 +419,11 @@
    "outputs": [],
    "source": [
     "m = [1, 2, 3; 4, 5, 6]\n",
+    "\n",
     "a = m(1,2)\n",
     "b = m(1:2, 1:2)\n",
     "c = m(:, 1)        % cała kolumna\n",
-    "d = m(1, :)        % cały wiersz"
+    "d = m(end, :)        % cały wiersz"
    ]
   },
   {
@@ -433,7 +446,7 @@
     }
    },
    "source": [
-    "# Rozmiary wektorów i macierzy\n",
+    "## Rozmiary wektorów i macierzy\n",
     "\n",
     "* `length(w)`  ilość elementów wektora lub najdłuższy wymiar macierzy \n",
     "* `size(m)`    zwraca ilość wierszy i kolumn\n",
@@ -462,6 +475,19 @@
     "a = length(m)\n",
     "b = size(m)\n",
     "c = numel(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Ćwiczene** napisz funkcję `suma`, która wyznaczy sumę wszystkich elementów macierzy podanej w argumencie. Ćwiczenie wykonaj z użyciem instrukcji pętli, iterując po wszystkich elementach macierzy.  \n",
+    "\n",
+    "W jaki sposób osiągnąć to samo za pomocą wunkcji `sum`?"
    ]
   },
   {
@@ -507,13 +533,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie** wygeneruj maicerz 10x10 zawieającą liczby od 1 do 100 umieszczone w losowej kolejności."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## Macierze i funkcje"
+    "## Macierze i funkcje\n",
+    "\n",
+    "Wiele funkcji Matlaba jest przystosowana do działania na macierzach o dowolnych kształtach\n"
    ]
   },
   {
@@ -547,6 +582,9 @@
    "source": [
     "m = [];\n",
     "size(m)\n",
+    "length(m)\n",
+    "numel(m)\n",
+    "\n",
     "m = [m 1]\n",
     "size(m)\n"
    ]
@@ -559,7 +597,7 @@
     }
    },
    "source": [
-    "## Usuwanie elementów \n",
+    "## Usuwanie elementów macierzy\n",
     "\n",
     "* dla wektorów można usuwać dowolne elementy\n",
     "* dla macierzy można usuwać tylko całe wiersze lub całe kolumny"
@@ -580,8 +618,29 @@
     "w([3 6]) = []\n",
     "w(6:end) = []\n",
     "\n",
+    "% m(1,1) = []\n",
     "m(1, :) = []\n",
     "m(:, 2) = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Zadanie 4\n",
+    "\n",
+    "Zaimplementuj funkcję o nazwie `sito`, która korzystając z algorytmu [sita Eratostenesa](https://pl.wikipedia.org/wiki/Sito_Eratostenesa) utworzy wektor zawierający serię liczb pierwszych od 2 do `N`, gdzie wartość `N` jest jedynym argumentem funkcji. W przypadku braku podania argumentu domyślnie będzie użyta wartość `N=100`. \n",
+    "\n",
+    "1. Utwórz ciąg liczb od 2 do $n$\n",
+    "2. Dla kolejnych $i$ od 2 do $\\sqrt{n}$ wykreśl z ciągu liczb wszystkie wielokrotności $i$, czyli $i, 2i, 3i, \\ldots$\n",
+    "3. Zwróć liczby, które nie zostały wykreślone\n",
+    "\n",
+    "Wynik funkcji `sito` powinien być identyczny do wyniku funkcji Matlaba `primes`\n",
+    "\n"
    ]
   }
  ],
