--- a/02_funkcje_instr.ipynb
+++ b/02_funkcje_instr.ipynb
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,22 +760,40 @@
     "      otherwise\n",
     "         printf('Podałeś więcej niż 1 argument\\n')\n",
     "   end\n",
+    "   disp(nargin)\n",
     "   disp(x)\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      " 42\n",
+      "0\n",
+      " 42\n",
+      "Jeden argument\n",
+      " 1\n",
+      " 13\n",
+      "Podałeś więcej niż 1 argument\n",
+      " 4\n",
+      " 13\n"
+     ]
+    }
+   ],
    "source": [
     "argumenty\n",
     "argumenty()\n",
     "argumenty(13)\n",
-    "argumenty(13, 44)"
+    "argumenty(13, 44, 4637, 43)"
    ]
   },
   {
@@ -790,7 +808,7 @@
     "Skrypt `rzut_moneta` przepisz do postaci funkcji, która może przyjąć 2 argumenty.  \n",
     "Argumenty:  \n",
     "* $p$ prawdopodobieństwo wylosowania orła. Domyślna wartość $p=0.5$\n",
-    "* $n$ ilość powtórzeń rzutu. Dmyślna wartość $n=1$\n",
+    "* $n$ ilość powtórzeń rzutu. Domyślna wartość $n=1$\n",
     "\n",
     "W przypadku braku podania argumentów funkcja zachowuje się identyczne jak pierwotny skrypt, tj. z prawdopodobieństwem $p=0.5$ wylosuje orła lub reszkę. Podanie pierwszego argumentu definiuje prawdopodobieństwo wypadnięcia orła, zaź podanie drugiego argumentu pozwala ustwaić liczbę rzutów monetą (wynik wypisywany jest $n$ razy)."
    ]
