--- a/03_macierze.ipynb
+++ b/03_macierze.ipynb
@@ -23,13 +23,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s =  5\n",
+      "v1 =\n",
+      "\n",
+      "    5   88    3   11\n",
+      "\n",
+      "v2 =\n",
+      "\n",
+      "   3\n",
+      "   7\n",
+      "   4\n",
+      "\n",
+      "m =\n",
+      "\n",
+      "   9   6   3\n",
+      "   5   7   2\n",
+      "\n",
+      "Variables in the current scope:\n",
+      "\n",
+      "   Attr Name        Size                     Bytes  Class\n",
+      "   ==== ====        ====                     =====  ===== \n",
+      "        ans         1x5                          5  char\n",
+      "        m           2x3                         48  double\n",
+      "        s           1x1                          8  double\n",
+      "        v1          1x4                         32  double\n",
+      "        v2          3x1                         24  double\n",
+      "\n",
+      "Total is 19 elements using 117 bytes\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "s = 5                 % skalar\n",
     "v1 = [5, 88, 3, 11]   % wektor \"wierszowy\"\n",
@@ -55,9 +90,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1 =\n",
+      "\n",
+      "   1   2   3   4\n",
+      "\n",
+      "v2 =\n",
+      "\n",
+      "    1.0000    1.5000    2.0000    2.5000    3.0000    3.5000    4.0000\n",
+      "\n",
+      "v3 =\n",
+      "\n",
+      "   1.0000   1.2500   1.5000   1.7500   2.0000\n",
+      "\n",
+      "'linspace' is a built-in function from the file libinterp/corefcn/data.cc\n",
+      "\n",
+      " -- linspace (START, END)\n",
+      " -- linspace (START, END, N)\n",
+      "     Return a row vector with N linearly spaced elements between START\n",
+      "     and END.\n",
+      "\n",
+      "     If the number of elements is greater than one, then the endpoints\n",
+      "     START and END are always included in the range.  If START is\n",
+      "     greater than END, the elements are stored in decreasing order.  If\n",
+      "     the number of points is not specified, a value of 100 is used.\n",
+      "\n",
+      "     The 'linspace' function returns a row vector when both START and\n",
+      "     END are scalars.  If one, or both, inputs are vectors, then\n",
+      "     'linspace' transforms them to column vectors and returns a matrix\n",
+      "     where each row is an independent sequence between\n",
+      "     'START(ROW_N), END(ROW_N)'.\n",
+      "\n",
+      "     For compatibility with MATLAB, return the second argument (END)\n",
+      "     when only a single value (N = 1) is requested.\n",
+      "\n",
+      "     See also: colon, logspace.\n",
+      "\n",
+      "Additional help for built-in functions and operators is\n",
+      "available in the online version of the manual.  Use the command\n",
+      "'doc <topic>' to search the manual index.\n",
+      "\n",
+      "Help and information about Octave is also available on the WWW\n",
+      "at https://www.octave.org and via the help@octave.org\n",
+      "mailing list.\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = 1:4\n",
     "v2 = 1:0.5:4\n",
@@ -94,15 +178,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\n",
+      "\n",
+      "  -5  -4  -3  -2  -1   0   1   2   3   4   5\n",
+      "\n",
+      "a = -5\n",
+      "b = -4\n",
+      "c =\n",
+      "\n",
+      "  -5  -4  -3\n",
+      "\n",
+      "ind =\n",
+      "\n",
+      "   1   3   5   7   9\n",
+      "\n",
+      "d =\n",
+      "\n",
+      "  -5  -3  -1   1   3\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "v = -5:5\n",
     "a = v(1)\n",
     "b = v(2)\n",
     "c = v(1:3)       % indeksowanie zakresem \n",
-    "ind = 1:2:10;\n",
+    "ind = 1:2:10\n",
     "d = v(ind)       % indeksowanie innym wektorem zawierającym indeksy"
    ]
   },
@@ -121,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -129,9 +238,9 @@
    },
    "outputs": [],
    "source": [
-    "v(end)   % ostatni element\n",
-    "v(1:end)\n",
-    "v(:)    % wszystkie elementy\n"
+    "v(end)  ; % ostatni element\n",
+    "v(1:end);\n",
+    "v(:) ;   % wszystkie elementy"
    ]
   },
   {
@@ -143,13 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\r\n",
+      "\r\n",
+      "   42   -4   -3   -2   -1    0    1    2    3    4    5\r\n",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "% modyfikowanie elementów \n",
     "v(1) = 42;\n",
@@ -158,9 +278,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\n",
+      "\n",
+      "   222    -4   222    -2    -1     0     1     2     3     4   222\n",
+      "\n",
+      "v =\n",
+      "\n",
+      "   222    -4   222   333   333   333   333     2     3     4   222\n",
+      "\n",
+      "v =\n",
+      "\n",
+      "  -100  -200  -300   333   333   333   333     2     3     4   222\n",
+      "\n",
+      "v =\n",
+      "\n",
+      "   222     4     3     2   333   333   333   333  -300  -200  -100\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "% modyfikowanie zakresu wartości\n",
     "v([1 3 end]) = 222\n",
@@ -194,16 +339,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\n",
+      "\n",
+      "   1   2   3\n",
+      "\n",
+      "v =\n",
+      "\n",
+      "   1   2   3   0   0   0   0   0   0   5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# referencja do elementu poza zakresem\n",
-    "v = [1 2 3];\n",
+    "v = [1 2 3]\n",
     "v(10) = 5;\n",
     "\n",
     "v"
@@ -211,9 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1 =\r\n",
+      "\r\n",
+      "   1   2   3   0   0   0   0   0   0   5\r\n",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = zeros([1, 10]);\n",
     "v1(1:3) = 1:3;\n",
@@ -233,9 +405,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w =\n",
+      "\n",
+      "    1    2    3    4    5    6    7    8    9   10   11   12\n",
+      "\n",
+      "w =\n",
+      "\n",
+      "    2    3    4    5    6    7    8    9   10   11   12\n",
+      "\n",
+      "w =\n",
+      "\n",
+      "    2    3    5    6    8    9   10   11   12\n",
+      "\n",
+      "w =\n",
+      "\n",
+      "   2   3   5   6   8\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "w = 1:12\n",
     "\n",
@@ -259,9 +454,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v2 =\n",
+      "\n",
+      "   1\n",
+      "   2\n",
+      "   3\n",
+      "   4\n",
+      "   5\n",
+      "\n",
+      "v2 =\n",
+      "\n",
+      "    1\n",
+      "   42\n",
+      "    3\n",
+      "    4\n",
+      "    5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "v = 1:5;\n",
     "v2 = v'\n",
@@ -285,9 +503,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =\n",
+      "\n",
+      "     1     2     3   101   102   103\n",
+      "\n",
+      "b =\n",
+      "\n",
+      "     1   101\n",
+      "     2   102\n",
+      "     3   103\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "v1 = 1:3;\n",
     "v2 = 101:103;\n",
@@ -298,9 +535,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c =\n",
+      "\n",
+      "     1     2     3\n",
+      "   101   102   103\n",
+      "\n",
+      "d =\n",
+      "\n",
+      "     1\n",
+      "     2\n",
+      "     3\n",
+      "   101\n",
+      "   102\n",
+      "   103\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "c = [v1 ; v2 ]    % rozszerzenie kolumn\n",
     "d = [v1'; v2']"
@@ -334,9 +594,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 =\n",
+      "\n",
+      "   1   2   3\n",
+      "   4   5   6\n",
+      "\n",
+      "m2 =\n",
+      "\n",
+      "    5    6    7    8\n",
+      "   10   11   12   13\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "m1 = [1 2 3; 4 5 6]\n",
     "m2 = [5:8 ; 10:13]"
@@ -359,9 +636,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =\n",
+      "\n",
+      "   0.771516   0.309944   0.650442\n",
+      "   0.455241   0.010408   0.487700\n",
+      "   0.735588   0.490463   0.365431\n",
+      "\n",
+      "b =\n",
+      "\n",
+      "   0.436152   0.984827\n",
+      "   0.237919   0.462540\n",
+      "   0.783551   0.074986\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = rand(3)\n",
     "b = rand(3, 2)"
@@ -369,9 +667,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c =\n",
+      "\n",
+      "   0   0   0   0   0\n",
+      "   0   0   0   0   0\n",
+      "   0   0   0   0   0\n",
+      "   0   0   0   0   0\n",
+      "   0   0   0   0   0\n",
+      "\n",
+      "d =\n",
+      "\n",
+      "   1   1   1   1   1\n",
+      "   1   1   1   1   1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "c = zeros(5)\n",
     "d = ones(2,5)"
@@ -379,9 +699,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e =\r\n",
+      "\r\n",
+      "Diagonal Matrix\r\n",
+      "\r\n",
+      "   1   0   0   0\r\n",
+      "   0   1   0   0\r\n",
+      "   0   0   1   0\r\n",
+      "   0   0   0   1\r\n",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "e = eye(4)"
    ]
@@ -414,9 +750,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m =\n",
+      "\n",
+      "   1   2   3\n",
+      "   4   5   6\n",
+      "\n",
+      "a =  2\n",
+      "b =\n",
+      "\n",
+      "   1   2\n",
+      "   4   5\n",
+      "\n",
+      "c =\n",
+      "\n",
+      "   1\n",
+      "   4\n",
+      "\n",
+      "d =\n",
+      "\n",
+      "   4   5   6\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "m = [1, 2, 3; 4, 5, 6]\n",
     "\n",
@@ -428,9 +793,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  1\n",
+      "b =  6\n",
+      "c =\n",
+      "\n",
+      "   1   4   2   5   3   6\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "% indeksowanie liniowe\n",
     "a = m(1)\n",
@@ -455,9 +833,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  100\n",
+      "b =\n",
+      "\n",
+      "     1   100\n",
+      "\n",
+      "c =  100\n"
+     ]
+    }
+   ],
    "source": [
     "w = 1:100;\n",
     "a = length(w)\n",
@@ -467,9 +858,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  100\n",
+      "b =\n",
+      "\n",
+      "    13   100\n",
+      "\n",
+      "c =  1300\n"
+     ]
+    }
+   ],
    "source": [
     "m = rand(13, 100);\n",
     "a = length(m)\n",
@@ -488,139 +892,6 @@
     "**Ćwiczene** napisz funkcję `suma`, która wyznaczy sumę wszystkich elementów macierzy podanej w argumencie. Ćwiczenie wykonaj z użyciem instrukcji pętli, iterując po wszystkich elementach macierzy.  \n",
     "\n",
     "W jaki sposób osiągnąć to samo za pomocą wunkcji `sum`?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-29T17:41:33.997960Z",
-     "start_time": "2020-10-29T17:41:33.953518Z"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Zmiana rozmiaru macierzy\n",
-    "\n",
-    "* `reshape(A, M, N)` lub `reshape(A, [M N])` zmienia kształt macierzy na `MxN` (elementy układane kolumnami)\n",
-    "* `fliplr(m)` , `flipup(m)`, `rot90()`  odbicie lewo-prawo, góra-dół i obrót 90 stopni"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = 1:12; \n",
-    "\n",
-    "a = reshape(w, 3, 4)\n",
-    "a1 = reshape(a, [2 6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = fliplr(a)\n",
-    "c = flipud(a)\n",
-    "d = rot90(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ćwiczenie** wygeneruj maicerz 10x10 zawieającą liczby od 1 do 100 umieszczone w losowej kolejności."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Macierze i funkcje\n",
-    "\n",
-    "Wiele funkcji Matlaba jest przystosowana do działania na macierzach o dowolnych kształtach\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = 1:12\n",
-    "m = reshape(w, 3, 4)\n",
-    "a = sin(w)\n",
-    "b = cos(m)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Puste macierze\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = [];\n",
-    "size(m)\n",
-    "length(m)\n",
-    "numel(m)\n",
-    "\n",
-    "m = [m 1]\n",
-    "size(m)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Usuwanie elementów macierzy\n",
-    "\n",
-    "* dla wektorów można usuwać dowolne elementy\n",
-    "* dla macierzy można usuwać tylko całe wiersze lub całe kolumny"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "w = 1:12\n",
-    "m = reshape(w, 3, 4)\n",
-    "\n",
-    "w(1) = []   % usuwanie elementu\n",
-    "w([3 6]) = []\n",
-    "w(6:end) = []\n",
-    "\n",
-    "% m(1,1) = []\n",
-    "m(1, :) = []\n",
-    "m(:, 2) = []"
    ]
   },
   {
