--- a/05_lab.ipynb
+++ b/05_lab.ipynb
@@ -15,7 +15,7 @@
     "* macierze logiczne i operacje na macierzach logicznych\n",
     "* optymalizacja kodu\n",
     " * wektoryzacja - zamiana pętli po elementach na mechanizmy indeksowania\n",
-    " * prealokacja - dynamiczne modyfikowanie rozmiarów macierzy jest kosztowne\n",
+    " * pre-alokacja - dynamiczne modyfikowanie rozmiarów macierzy jest kosztowne\n",
     "\n"
    ]
   },
@@ -32,13 +32,13 @@
     "\n",
     "Operator | Opis | Operator | Opis | \n",
     ":-|:-|:-|:-|\n",
-    "`A + B` | dodawanie| `A .+ B` | dodawnie |\n",
+    "`A + B` | dodawanie| `A .+ B` | dodawanie |\n",
     "`A - B` | odejmowanie| `A .- B` | odejmowanie |\n",
     "`A * B` | iloczyn macierzy| `A .* B` | mnożenie elementów |\n",
     "`A / B` | dzielenie macierzy $A B^{-1}$  (a właściwie $(B^T/A^T)^T)$ | `A ./ B` | dzielenie elementów |\n",
     "`A \\ B` | dzielenie macierzy $A^{-1}B $ (rozwiązanie $Ax=B$) | `A .\\ B` | dzielenie elementów |\n",
     "`A'` | transpozycja (sprzężona)| `A.'` transpozycja | \n",
-    "`A ^ n` | potęgowanie macierzy (`A * A * ... * A`)| `A.^B` | potegowanie elementami |\n",
+    "`A ^ n` | potęgowanie macierzy (`A * A * ... * A`)| `A.^B` | potęgowanie elementami |\n",
     "\n"
    ]
   },
@@ -56,11 +56,11 @@
     ":-|:-|\n",
     "`zeros(N, M)` | macierz zerowa |\n",
     "`ones(N, M)` | macierz z jedynkami |\n",
-    "`eye(N, M)` | macierz tożsamożsciowa z 1 na diagonali |\n",
+    "`eye(N, M)` | macierz tożsamościowa z 1 na diagonali |\n",
     "`rand(N, M)` | macierz z wartościami losowymi z rozkładu jednostajnego $[0,1]$ |\n",
-    "`randn(N, M)` | macierz z wartościami losowaymi z rozkladu normalnego $N(0,1)$ |\n",
+    "`randn(N, M)` | macierz z wartościami losowymi z rozkładu normalnego $N(0,1)$ |\n",
     "`linspace(A, B, K)` | wektor $K$ puntów na odcinku $[A,B]$ |\n",
-    "`magic(N)`          | macierz liczb całkowitych o identycznej sumie w wierszach i kokumnach |\n",
+    "`magic(N)`          | macierz liczb całkowitych o identycznej sumie w wierszach i kolumnach |\n",
     "\n"
    ]
   },
@@ -82,7 +82,7 @@
     "`size(A)`         | ilość wierszy i kolumn macierzy |\n",
     " `numel(A)`       | ilość elementów |\n",
     "`trace(A)`        | ślad macierzy |\n",
-    "`det(A)`          | wyznacznuk macierzy |\n",
+    "`det(A)`          | wyznacznik macierzy |\n",
     "`rank(A)`         | rząd macierzy |\n",
     "`inv(A)`          | odwrócenie macierzy $A^{-1}$ |\n",
     "\n"
@@ -104,8 +104,22 @@
     "7 x+8 y \\quad=1\n",
     "\\end{array}\\right.\n",
     "$$\n",
-    "1. rozwiązaując równanie $x = A^{-1}b$\n",
-    "2. za pomoca operatora `\\`\n"
+    "1. rozwiązując równanie $x = A^{-1}b$  \n",
+    "2. za pomocą operatora `\\`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [1 2 3 ; 4 5 6; 7 8 0]\n",
+    "b = [1 ; 1; 1]\n",
+    "x = inv(A) * b\n",
+    "\n",
+    "x1 = A \\ b \n",
+    "A * x1"
    ]
   },
   {
@@ -130,7 +144,18 @@
     "X = reshape(1:24, 4, 6)\n",
     "\n",
     "a = sin(X)\n",
-    "b = cos(X) .* sin(a)"
+    "b = 5 *  cos(X) .* sin(a) + exp(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type pole_kola2.m\n",
+    "x = rand(3, 4)\n",
+    "y = pole_kola2(x) + x  "
    ]
   },
   {
@@ -154,6 +179,7 @@
    },
    "source": [
     "**Ćwiczenie** zmierz czas wykonywania poniższych instrukcji.\n",
+    "\n",
     "* porównaj szybkość działania przy zastosowaniu prealokowanego wektora `x`\n",
     "* przyśpiesz działanie stosując wektoryzację (pozbądź się instrukcji pętli)"
    ]
@@ -165,12 +191,26 @@
    "outputs": [],
    "source": [
     "n=100000\n",
+    "x = [];\n",
     "tic\n",
     "for i=1:n\n",
     "    x(i) = sqrt(i);\n",
     "end\n",
     "toc\n",
-    "sum(x)"
+    "sum(x)\n",
+    "\n",
+    "x = zeros(1, n);\n",
+    "tic\n",
+    "for i=1:n\n",
+    "    x(i) = sqrt(i);\n",
+    "end\n",
+    "toc\n",
+    "sum(x)\n",
+    "\n",
+    "tic\n",
+    "x = sqrt([1:n]);\n",
+    "toc\n",
+    "sum(x)\n"
    ]
   },
   {
@@ -197,7 +237,7 @@
    "source": [
     "X = [1 , -5, 7 ; -1, 42, -12]\n",
     "ind = X < 0\n",
-    "whos ind"
+    "whos X ind"
    ]
   },
   {
@@ -206,10 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# indeksowanie macierzą logiczną\n",
+    "-12# indeksowanie macierzą logiczną\n",
     "a = X(ind)    \n",
     "b = X( X > 0 )\n",
-    "X( X > 0) = 111"
+    "X( X > 0 ) = 102"
    ]
   },
   {
@@ -224,7 +264,7 @@
    "source": [
     "A = true(2)\n",
     "B = false(2, 3)\n",
-    "whos A B"
+    "whos A B "
    ]
   },
   {
@@ -234,6 +274,7 @@
    "outputs": [],
    "source": [
     "# wartości logiczne mogą być traktowane jak liczby całkowite\n",
+    "A = false(2)\n",
     "C = A + 1\n",
     "whos A C"
    ]
@@ -255,8 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = 1:5;\n",
-    "w([1 0 1 0 1]) = -1"
+    "w = 1:5\n",
+    "w([1 0 1 0 1] == 1 ) = 0"
    ]
   },
   {
@@ -271,8 +312,8 @@
     "\n",
     "Funkcja | Opis |\n",
     ":-|:-|\n",
-    "`any()` | zwraca 1 gdy wektor posiada niezerowy element |  \n",
-    " | dla macierzy zwraca wektor z wartością 1 gdy w kolumnie jest niezerowa wartość   |\n",
+    "`any()` | zwraca 1 gdy wektor posiada niezerowy element |\n",
+    "|| dla macierzy zwraca wektor z wartością 1 gdy w kolumnie jest niezerowa wartość   |\n",
     "`all()` | zwraca 1 dla każdej kolumny której wszystkie elementy są niezerowe |\n",
     "`find()` | zwraca indeksy (indeksowanie liniowe) niezerowych elementów |\n",
     "`isequal()` | sprawdza czy macierze mają jednakowe elementy |\n",
@@ -320,6 +361,7 @@
    },
    "outputs": [],
    "source": [
+    "E\n",
     "# indeksy liniowe\n",
     "k = find(E)\n",
     "a = E(k)"
@@ -331,6 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "E\n",
     "# indeksy wierszy i kolumn\n",
     "[w k] = find(E)"
    ]
@@ -351,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# szukanie elementów spełniających okreslone warunki\n",
+    "# szukanie elementów spełniających określone warunki\n",
     "k3 = find(E > 2)"
    ]
   },
@@ -394,6 +437,7 @@
    "outputs": [],
    "source": [
     "X(1,1) = 13\n",
+    "\n",
     "isequal(E, X)\n",
     "all(all(X == E))   \n",
     "~any(any(X ~= E))"
@@ -414,10 +458,10 @@
     "`A < B` | mniejszy niż |\n",
     "`A > B` | większy niż |\n",
     "`A <= B` | mniejszy lub równy |\n",
-    "`A >= B` | wiekszy lub równy  |\n",
+    "`A >= B` | większy lub równy  |\n",
     "`A == B` | równy sobie |\n",
-    "`A ~= B` | rózny od siebie |\n",
-    "`A & B` | aperator AND elementami |\n",
+    "`A ~= B` | rożny od siebie |\n",
+    "`A & B` | operator AND elementami |\n",
     "`A \\| B` | operator OR elementami |\n",
     "`~A `   | Operator NOT |\n",
     "\n"
@@ -468,13 +512,26 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "**Ćwiczenie** utwórz macierz `X` o wymiarach 10x10 posiadającą losowe wartości z zakresu od -1 do 1.\n",
+    "**Ćwiczenie** utwórz macierz `X` o wymiarach 10x10 posiadającą losowe wartości z rozkłady normalnego $N(0, 1)$\n",
+    "\n",
     "* zastąp wszystkie elementy o wartości ujemnej w macierzy `X` liczbą `0`\n",
     "* wyznacz sumę wszystkich elementów $x > 0.5$  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = randn(10, 10);\n",
+    "X( X < 0) = 0;\n",
+    "sum(X(X > 0.5))\n",
+    "sum(X(find(X > 0.5)))"
    ]
   },
   {
@@ -492,12 +549,13 @@
     "`min` | minimum (w kolumnach)|\n",
     "`max` | maksimum (w kolumnach) |\n",
     "`mean`\t| wartość średnia |\n",
-    "`std`\t| odchylena standardowe |\n",
+    "`std`\t| odchylenie standardowe |\n",
     "`median` | mediana |\n",
-    "`mode` |\twartość modelana |\n",
-    "`var` |\twarianscja |\n",
+    "`mode` | wartość modalna (dominanta) |\n",
+    "`var` | wariancja |\n",
     "`kurtosis` | kurtoza |\n",
-    "`skewnes` | skośność |\n"
+    "`skewnes` | skośność |\n",
+    "`sort`    | sortowanie |\n"
    ]
   },
   {
@@ -512,7 +570,8 @@
    "source": [
     "X = randn(3,5)\n",
     "\n",
-    "a = min(X)\n",
+    "\n",
+    "[a ia]= min(X)\n",
     "\n",
     "% minimim w wierszach\n",
     "a1 = min(X, [], 2)\n",
@@ -533,7 +592,7 @@
    "source": [
     "b = mean(X)\n",
     "\n",
-    "# ścrednia w wierszach\n",
+    "# średnia w wierszach\n",
     "b1 = mean(X, 2)"
    ]
   },
@@ -588,12 +647,13 @@
    },
    "source": [
     "**Ćwiczenie** wczytaj dane `carsmall` i wykonaj następujące operacje:\n",
-    "* sprawdź, czy zmienne dane zawierają wartości brakujące (oznaczone jako `NaN`) \n",
-    "* usuń wartości brakujące ze zminnnej `MPG` i wyznacz jej wartość średnią i odchylenie\n",
-    "* wysnacz wartość średnią `MPG` dla samochodów z roku 82 (`Model_year`)\n",
-    "* wyznacz najczęsciej występujący rocznik\n",
     "\n",
-    "Dane dla OCtave: https://www.fizyka.umk.pl/~grochu/pp2/carsmall.mat"
+    "* sprawdź, czy zmienne dane zawierają wartości brakujące (oznaczone jako `NaN`) \n",
+    "* usuń wartości brakujące ze zmiennej `MPG` i wyznacz jej wartość średnią i odchylenie\n",
+    "* wyznacz wartość średnią `MPG` dla samochodów z roku 82 (`Model_year`)\n",
+    "* wyznacz najczęściej występujący rocznik\n",
+    "\n",
+    "Dane dla Octave: https://www.fizyka.umk.pl/~grochu/pp2/carsmall.mat"
    ]
   },
   {
@@ -623,9 +683,10 @@
    },
    "outputs": [],
    "source": [
+    "clear\n",
     "load carsmall\n",
     "whos\n",
-    "% plik z danymi (dla OCtave) https://www.fizyka.umk.pl/~grochu/pp2/carsmall.m"
+    "% plik z danymi (dla Octave) https://www.fizyka.umk.pl/~grochu/pp2/carsmall.mat"
    ]
   },
   {
@@ -648,7 +709,7 @@
    "outputs": [],
    "source": [
     "boxplot(MPG);\n",
-    "% w octave moze byc wymagane dointalowanie pakietu statystycznego\n",
+    "% uwaga: w octave moze byc wymagane doinstalowanie pakietu statystycznego\n",
     "% pkg load statistics"
    ]
   },
@@ -726,10 +787,12 @@
     }
    },
    "source": [
-    "**Ćwiczenie** wygeneruj wektor zawierający 1000 wartości z roskładu normalengo o średniej 5 i odchyleniu standardowym 10.\n",
+    "**Ćwiczenie** wygeneruj wektor zawierający 1000 wartości z rozkładu normalnego o średniej 5 i odchyleniu standardowym 10.\n",
+    "\n",
     "* narysuj histogram\n",
-    "* wysnacz wartość średnią $\\mu$, odchylenie standardowe $\\sigma$\n",
-    "* dodaj do wykresu z hostpgramem wykres prezentujący funkcję rozkładu normalnego $N(\\mu, \\sigma) = A \\cdot \\exp \\left(\\frac{-(x-\\mu)^{2}}{2 \\sigma^{2}}\\right)$ (dobierz $A$ tak aby wykres jak najlepiej pokrywał się z histogramem )"
+    "* wyznacz wartość średnią $\\mu$, odchylenie standardowe $\\sigma$\n",
+    "* dodaj do wykresu z histogramem wykres prezentujący funkcję rozkładu normalnego $N(\\mu, \\sigma) = A \\cdot \\exp \\left(\\frac{-(x-\\mu)^{2}}{2 \\sigma^{2}}\\right)$ (dobierz $A$ tak aby wykres jak najlepiej pokrywał się z kształtem histogramu )\n",
+    "* porównaj uzyskany wykres z wykresem wygenerowanym za pomocą funkcji `histfit()`"
    ]
   },
   {
@@ -742,9 +805,9 @@
    "source": [
     "## Zadanie 6 Regresja liniowa\n",
     "\n",
-    "Napisz funkcję o nazwie `regresja`, która dla danych werktowów $x$ i $y$ zwróci współczynniki $a$ i $b$ okreslające linię prostą $y = a x + b$ dopasowaną do danych $x$ i $y$ za pomocą metody najmniejszych kwadratów. \n",
+    "Napisz funkcję o nazwie `regresja`, która dla danych wektorów $x$ i $y$ zwróci współczynniki $a$ i $b$ określające linię prostą $y = a x + b$ dopasowaną do danych $x$ i $y$ za pomocą metody najmniejszych kwadratów. \n",
     "\n",
-    "Dla danych $x_i$ i $y_i$ wspólczyniki $a$ i $b$ wyznacz ze wzoru:\n",
+    "Dla danych $x_i$ i $y_i$ współczynniki $a$ i $b$ wyznacz ze wzoru:\n",
     "\n",
     "$$\n",
     "a=\\frac{\\sum_{i=1}^{n}\\left(x_{i}-\\bar{x}\\right)\\left(y_{i}-\\bar{y}\\right)}{\\sum_{i=1}^{n}\\left(x_{i}-\\bar{x}\\right)^{2}}\n",
@@ -755,15 +818,28 @@
     "$$\n",
     "gdzie $\\bar{x}$ i $\\bar{y}$ to wartości średnie zmiennych.\n",
     "\n",
-    "Argumentami funkcji są dwa werktory $x$ i $y$. Jeżeli rozmiary wektorów nie zgadzają się, funkcja zwraca stosowany komunikat błedu oraz przerywa swoje działanie. Jeżeli użytkownik poda za mało lub za dużo argumentów, wówczas funkcja również zwraca odpowiedni komunikat z błędem i konczy swoje działanie. Do wypisania komunikatów z będęm wykorzystaj funkcję `error()`.\n",
-    "\n",
-    "Przykład działania funkcji:\n"
+    "Argumentami funkcji są dwa wektory $x$ i $y$. Jeżeli rozmiary wektorów nie zgadzają się, funkcja zwraca stosowany komunikat błędu oraz przerywa swoje działanie. Jeżeli użytkownik poda za mało lub za dużo argumentów, wówczas funkcja również zwraca odpowiedni komunikat z błędem i kończy swoje działanie. Do wypisania komunikatów z błędem wykorzystaj funkcję `error()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Przykład działania funkcji:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "x = 0:.1:10;\n",
